--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css?family=Megrim|Montserrat|Poiret+One" rel="stylesheet">
+
     <title>React App</title>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div id="react-gallery"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
