--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="pl">
+<head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Projekty | Aleksandra Półtorak - Programista & Grafik & Webmaster</title>
+    <meta name="Title" content="Aleksandra Półtorak, Programista, Grafik, Webmaster, Kraków">
+    <meta name="Description"
+          content="Aleksandra Półtorak - Programista & Grafik & Webmaster, Kraków E-Mail: aleksandra.poltorak.x@gmail.com">
+    <meta name="Keywords"
+          content="Aleksandra Półtorak, Programista, Grafik, Webmaster, Kraków, Studentka, Uniwersytet Jagielloński, UJ, Informatyk, Informatyka, portfolio, Programowanie, C++, C#, Python, Web, HTML, CSS, JavaScript, js, PHP, Bootstrap, Unity, Unreal Engine, Adobe, Photoshop, Illustrator, GIMP">
+    <meta name=”robots” content=”noodp”>
+    <meta name="robots" content="noydir"/>
+    <meta name="author" content="Aleksandra Półtorak">
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicons/favicon-16x16.png">
+    <link rel="manifest" href="../favicons/site.webmanifest">
+    <link rel="mask-icon" href="../favicons/safari-pinned-tab.svg" color="#4b0099">
+    <link rel="shortcut icon" href="../favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#4b0099">
+    <meta name="msapplication-config" content="favicons/browserconfig.xml">
     <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <link href="https://fonts.googleapis.com/css?family=Megrim|Montserrat|Poiret+One" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
 
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="react-gallery"></div>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+</head>
+<body>
+<div id="top"></div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<div class="nav-icon">
+    <span class="nav-icon__line nav-icon__line__left"> </span>
+    <span class="nav-icon__line"> </span>
+    <span class="nav-icon__line nav-icon__line__right"> </span>
+</div>
+<nav class="navbar">
+    <div class="nav-content">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="https://aleksandra-poltorak.pl/#top">Home </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://aleksandra-poltorak.pl/#about-me">O&nbsp;mnie</a>
+            </li>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+            <li class="nav-item">
+                <a class="nav-link" href="https://aleksandra-poltorak.pl/#what-can-i-do-for-you">Oferta</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="https://aleksandra-poltorak.pl/#portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://aleksandra-poltorak.pl/#contact">Kontakt</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<header class="header subpage-header subpage-header--all-projects js-parallax-bg">
+    <div class="subpage-header__title">
+        <h1 class="">Wszystkie projekty</h1>
+        <!--<p class="">Strona internetowa</p>-->
+    </div>
+</header>
+<noscript>
+    You need to enable JavaScript to run this app.
+</noscript>
+
+
+<section class="design">
+    <div class="section-header">
+        <h2 class="section-header__title">Projekty</h2>
+        <!--<h3 class="section-header__title">Jak wygląda strona?</h3>-->
+    </div>
+    <div class="container-full">
+        <div id="react-gallery"></div>
+    </div>
+</section>
+<section class="subpage-main subpage-main--react-gallery">
+    <div class="container">
+        <div class="section-header">
+            <h2 class="section-header__title">Informacje</h2>
+            <h3 class="section-header__title">Galeria w React.js</h3>
+            <div class="subpage-main__info">
+                <p>Powyższa galeria została wykonana w React.js</p>
+                <p class="technologies">
+                    HTML • SCSS • JSX • React.js • RWD
+                </p>
+                <div class="subpage-main__buttons">
+                    <a class="button button-dark" href="https://github.com/infernalnephilim/react-gallery" target="_blank">
+                        Kod
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="link-section">
+        <a href="https://github.com/infernalnephilim" class="">
+            <i class="fab fa-github"> </i>
+        </a>
+        <a href="https://codepen.io/InfernalNephilim/" class="">
+            <i class="fab fa-codepen"> </i>
+        </a>
+        <a href="https://www.linkedin.com/in/aleksandra-poltorak/" class="">
+            <i class="fab fa-linkedin"> </i>
+        </a>
+    </div>
+    <div class="copyright">
+        &copy; Aleksandra Półtorak
+    </div>
+</footer>
+<script src="./scripts.min.js"></script>
+
+</body>
 </html>
